testsuite/tests/safeHaskell/check/pkg01/ImpSafeOnly05.stderr

ImpSafeOnly05.hs:5:1: error:
    M_SafePkg5: Can't be safely imported!
    The package (safePkg01-1.0) the module resides in isn't trusted.
