testsuite/tests/safeHaskell/check/pkg01/ImpSafeOnly05.hs
{-# LANGUAGE Haskell2010 #-}
{-# LANGUAGE Safe #-}
module Main where

import M_SafePkg5

main = do
    putStrLn $ show bigInt

